# CodingPractice

./: .gitignore  CMakeLists.txt  README.md  Todos.md  check_missing_solution.sh  cptest.sh  cptest_design_doc.md  create_test.sh  excluded_tests.txt
.github/workflows/: ci.yml
cmake/: CoreTests.cmake  ProblemTests.cmake
homebrew/: cptest.rb
include/: test_builder.hpp  test_runner.hpp
solutions/1_two_sum/: Readme.md  main.cpp  solution.cpp  solution.hpp
solutions/problem1071/: Readme.md  solution.cpp  solution.hpp
solutions/problem1108/: solution.cpp  solution.hpp
solutions/problem1189/: README.md  solution.cpp  solution.hpp
solutions/problem1207/: solution.cpp  solution.hpp
solutions/problem121/: solution.cpp  solution.hpp
solutions/problem13/: Readme.md  solution.cpp  solution.hpp
solutions/problem136/: solution.cpp  solution.hpp
solutions/problem1380/: Readme.md  solution.cpp  solution.hpp
solutions/problem1431/: solution.cpp  solution.hpp
solutions/problem151/: solution.cpp  solution.hpp
solutions/problem155/: solution.cpp  solution.hpp
solutions/problem1732/: solution.cpp  solution.hpp
solutions/problem1768/: Readme.md  solution.cpp  solution.hpp
solutions/problem20/: solution.cpp  solution.hpp
solutions/problem21/: solution.cpp  solution.hpp
solutions/problem217/: solution.cpp  solution.hpp
solutions/problem2215/: solution.cpp  solution.hpp
solutions/problem2239/: solution.cpp  solution.hpp
solutions/problem228/: solution.cpp  solution.hpp
solutions/problem238/: solution.cpp  solution.hpp
solutions/problem2390/: solution.cpp  solution.hpp
solutions/problem242/: solution.cpp  solution.hpp
solutions/problem283/: Readme.md  solution.cpp  solution.hpp
solutions/problem3/: solution.cpp  solution.hpp
solutions/problem334/: solution.cpp  solution.hpp
solutions/problem338/: solution.cpp  solution.hpp
solutions/problem344/: solution.cpp  solution.hpp
solutions/problem345/: solution.cpp  solution.hpp
solutions/problem36/: solution.cpp  solution.hpp
solutions/problem392/: solution.cpp  solution.hpp
solutions/problem435/: solution.cpp  solution.hpp
solutions/problem46/: solution.cpp  solution.hpp
solutions/problem56/: solution.cpp  solution.hpp
solutions/problem58/: solution.cpp  solution.hpp
solutions/problem605/: solution.cpp  solution.hpp
solutions/problem643/: Readme.md  solution.cpp  solution.hpp
solutions/problem682/: solution.cpp  solution.hpp
solutions/problem724/: solution.cpp  solution.hpp
solutions/problem739/: solution.cpp  solution.hpp
solutions/problem771/: solution.cpp  solution.hpp
solutions/problem83/: solution.cpp  solution.hpp
solutions/problem88/: Readme.md  solution.cpp  solution.hpp
solutions/problem933/: solution.cpp  solution.hpp
solutions/problem977/: solution.cpp  solution.hpp
src/: runner.cpp  test_builder.cpp  test_builder_main.cpp  test_runner.cpp  test_runner_main.cpp
templates/: README.md  test.cpp
testNew/problem1071/: test.cpp
testNew/problem1108/: test.cpp
testNew/problem1189/: test.cpp
testNew/problem1207/: test.cpp
testNew/problem13/: test.cpp
testNew/problem1431/: test.cpp
testNew/problem151/: test.cpp
testNew/problem1768/: test.cpp
testNew/problem20/: README.md  test.cpp
testNew/problem21/: test.cpp
testNew/problem2215/: test.cpp
testNew/problem2239/: README.md  test.cpp
testNew/problem228/: test.cpp
testNew/problem238/: test.cpp
testNew/problem2390/: test.cpp
testNew/problem242/: test.cpp
testNew/problem283/: test.cpp
testNew/problem334/: README.md
testNew/problem338/: test.cpp
testNew/problem345/: test.cpp
testNew/problem36/: test.cpp
testNew/problem392/: test.cpp
testNew/problem435/: test.cpp
testNew/problem443/: README.md
testNew/problem46/: test.cpp
testNew/problem56/: test.cpp
testNew/problem605/: test.cpp
testNew/problem643/: test.cpp
testNew/problem83/: test.cpp
testNew/problem88/: test.cpp
testNew/problem977/: README.md  test.cpp
tests/1_two_sum/: CMakeLists.txt  test.cpp
tests/core/: test_test_builder.cpp  test_test_runner.cpp
tests/problem1/: CMakeLists.txt
tests/problem1071/: test.cpp
tests/problem1108/: test.cpp
tests/problem1189/: test.cpp
tests/problem121/: README.md  test.cpp
tests/problem13/: test.cpp
tests/problem136/: test.cpp
tests/problem1380/: test.cpp
tests/problem1431/: test.cpp
tests/problem155/: test.cpp
tests/problem1732/: README.md  test.cpp
tests/problem1768/: test.cpp
tests/problem217/: test.cpp
tests/problem2215/: README.md
tests/problem2239/: test.cpp
tests/problem228/: test.cpp
tests/problem2390/: test.cpp
tests/problem3/: CMakeLists.txt  test.cpp
tests/problem338/: README.md
tests/problem344/: README.md  test.cpp
tests/problem435/: README.md
tests/problem443/: test.cpp
tests/problem46/: test.cpp
tests/problem58/: README.md  test.cpp
tests/problem643/: test.cpp
tests/problem682/: README.md  test.cpp
tests/problem724/: README.md  test.cpp
tests/problem739/: test.cpp
tests/problem771/: README.md  test.cpp
tests/problem933/: test.cpp
tests/problems/problem1/: test.cpp
tests/problems/problem1207/: README.md  test.cpp
tests/problems/problem136/: README.md
tests/problems/problem1380/: test.cpp
tests/problems/problem1431/: README.md
tests/problems/problem151/: README.md  test.cpp
tests/problems/problem155/: README.md
tests/problems/problem20/: test.cpp
tests/problems/problem21/: README.md  test.cpp
tests/problems/problem217/: README.md  test.cpp
tests/problems/problem2215/: test.cpp
tests/problems/problem228/: README.md
tests/problems/problem238/: README.md  test.cpp
tests/problems/problem2390/: README.md
tests/problems/problem242/: README.md  test.cpp
tests/problems/problem283/: test.cpp
tests/problems/problem3/: README.md  test.cpp
tests/problems/problem338/: test.cpp
tests/problems/problem344/: test.cpp
tests/problems/problem345/: README.md  test.cpp
tests/problems/problem36/: README.md  test.cpp
tests/problems/problem392/: README.md  test.cpp
(+16 files in other folders)
